--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>WTW</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="../public/css/main.min.css">
 </head>
 
 <body>
@@ -57,8 +57,7 @@
 
   <div id="root"></div>
 
-  <script src="bundle.js"></script>
-
+  <script src="../public/bundle.js"></script>
 </body>
 
 </html>
